Utworzono za pomocą Colaboratory

--- a/Spark_Intro.ipynb
+++ b/Spark_Intro.ipynb
@@ -6,7 +6,7 @@
       "name": "Spark_Intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM7/UpK+6FeVwPY/s0+Jey1",
+      "authorship_tag": "ABX9TyMFTLvP0dhWKu10LWcJdxC/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3925,12 +3925,189 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UggXIE6uUUqu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UggXIE6uUUqu",
+        "outputId": "3461259e-f6e7-48b1-8fa7-e9054fdbf446"
+      },
+      "source": [
+        "df = spark.read.csv(\"challenge.csv\", header=True)\r\n",
+        "df.show()"
+      ],
+      "execution_count": 214,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+---------------+--------------+-----------------+----------+\n",
+            "|     ip_address|       Country|      Domain Name|Bytes_used|\n",
+            "+---------------+--------------+-----------------+----------+\n",
+            "|  52.81.192.172|         China| odnoklassniki.ru|       463|\n",
+            "| 119.239.207.13|         China|         youtu.be|        51|\n",
+            "|  68.69.217.210|         China|        adobe.com|        10|\n",
+            "|   7.191.21.223|      Bulgaria|     linkedin.com|       853|\n",
+            "|   211.13.10.68|     Indonesia|          hud.gov|        29|\n",
+            "|   239.80.21.97|      Suriname|       smh.com.au|       218|\n",
+            "|106.214.106.233|       Jamaica|    amazonaws.com|        95|\n",
+            "| 127.242.24.138|         China| surveymonkey.com|       123|\n",
+            "|     99.2.6.139|Czech Republic|     geocities.jp|       322|\n",
+            "|   237.54.11.63|         China|       amazon.com|        83|\n",
+            "| 252.141.157.25|         Japan|      cornell.edu|       374|\n",
+            "|185.220.128.248|       Belgium|       weebly.com|       389|\n",
+            "|   151.77.19.45|   Afghanistan|independent.co.uk|       282|\n",
+            "|  9.161.158.225|     Indonesia|    bloglines.com|       726|\n",
+            "| 156.144.61.155|Czech Republic|   slideshare.net|       657|\n",
+            "|   8.96.188.151|     Indonesia|          ibm.com|       517|\n",
+            "|      5.72.7.65|        Mexico|         youtu.be|       877|\n",
+            "|227.110.112.144|       Croatia|         ehow.com|       287|\n",
+            "|    81.71.28.97|      Thailand|          last.fm|       588|\n",
+            "|  9.255.129.184|      Thailand|          mtv.com|       114|\n",
+            "+---------------+--------------+-----------------+----------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IP5spKb_VMO6",
+        "outputId": "de06aefb-8fa2-4af4-88c1-45d8130495c6"
+      },
+      "source": [
+        "df = df.withColumn(\"home\", when(df.Country == \"Mexico\", \"YES\").otherwise(\"NO\"))\r\n",
+        "df.show()"
+      ],
+      "execution_count": 215,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+---------------+--------------+-----------------+----------+----+\n",
+            "|     ip_address|       Country|      Domain Name|Bytes_used|home|\n",
+            "+---------------+--------------+-----------------+----------+----+\n",
+            "|  52.81.192.172|         China| odnoklassniki.ru|       463|  NO|\n",
+            "| 119.239.207.13|         China|         youtu.be|        51|  NO|\n",
+            "|  68.69.217.210|         China|        adobe.com|        10|  NO|\n",
+            "|   7.191.21.223|      Bulgaria|     linkedin.com|       853|  NO|\n",
+            "|   211.13.10.68|     Indonesia|          hud.gov|        29|  NO|\n",
+            "|   239.80.21.97|      Suriname|       smh.com.au|       218|  NO|\n",
+            "|106.214.106.233|       Jamaica|    amazonaws.com|        95|  NO|\n",
+            "| 127.242.24.138|         China| surveymonkey.com|       123|  NO|\n",
+            "|     99.2.6.139|Czech Republic|     geocities.jp|       322|  NO|\n",
+            "|   237.54.11.63|         China|       amazon.com|        83|  NO|\n",
+            "| 252.141.157.25|         Japan|      cornell.edu|       374|  NO|\n",
+            "|185.220.128.248|       Belgium|       weebly.com|       389|  NO|\n",
+            "|   151.77.19.45|   Afghanistan|independent.co.uk|       282|  NO|\n",
+            "|  9.161.158.225|     Indonesia|    bloglines.com|       726|  NO|\n",
+            "| 156.144.61.155|Czech Republic|   slideshare.net|       657|  NO|\n",
+            "|   8.96.188.151|     Indonesia|          ibm.com|       517|  NO|\n",
+            "|      5.72.7.65|        Mexico|         youtu.be|       877| YES|\n",
+            "|227.110.112.144|       Croatia|         ehow.com|       287|  NO|\n",
+            "|    81.71.28.97|      Thailand|          last.fm|       588|  NO|\n",
+            "|  9.255.129.184|      Thailand|          mtv.com|       114|  NO|\n",
+            "+---------------+--------------+-----------------+----------+----+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FN7j8QP7VXDz",
+        "outputId": "d6b47648-e87b-46a3-df79-b011bdca605a"
+      },
+      "source": [
+        "df2 = df.groupBy(\"home\").agg(sqlfunc.sum(df.Bytes_used).alias(\"total_used\"))\r\n",
+        "df2.show()"
+      ],
+      "execution_count": 216,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+----+----------+\n",
+            "|home|total_used|\n",
+            "+----+----------+\n",
+            "| YES|    6293.0|\n",
+            "|  NO|  508076.0|\n",
+            "+----+----------+\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E7kxVHXoVll2",
+        "outputId": "946cebfa-fab5-411c-aaa6-9dd1b317154c"
+      },
+      "source": [
+        "df3 = df.groupBy(\"Country\").agg(sqlfunc.countDistinct(df.ip_address).alias(\"number_of_ips\"))\r\n",
+        "df3.sort(col(\"number_of_ips\").desc()).show()"
+      ],
+      "execution_count": 218,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+--------------+-------------+\n",
+            "|       Country|number_of_ips|\n",
+            "+--------------+-------------+\n",
+            "|         China|          172|\n",
+            "|     Indonesia|          114|\n",
+            "|   Philippines|           65|\n",
+            "|        Russia|           56|\n",
+            "|        Brazil|           35|\n",
+            "|        Poland|           31|\n",
+            "|        Sweden|           28|\n",
+            "|         Japan|           25|\n",
+            "|      Portugal|           23|\n",
+            "|Czech Republic|           23|\n",
+            "|        France|           21|\n",
+            "|          Peru|           19|\n",
+            "|      Colombia|           17|\n",
+            "| United States|           15|\n",
+            "|     Argentina|           14|\n",
+            "|       Ukraine|           14|\n",
+            "|        Mexico|           13|\n",
+            "|      Thailand|           12|\n",
+            "|       Nigeria|           11|\n",
+            "|        Canada|           11|\n",
+            "+--------------+-------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tvaywDkfVy1w"
       },
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 217,
       "outputs": []
     }
   ]
